--- a/TankTrouble/TankTrouble.csproj
+++ b/TankTrouble/TankTrouble.csproj
@@ -45,6 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bullet.cs" />
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -62,6 +68,9 @@
     <Compile Include="Tank.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,18 +109,6 @@
     <None Include="Resources\kaboom1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\redTank_Down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\redTank_Left.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\redTank_right.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\redTank_Up.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\grass.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +122,42 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\welcome1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mauler_top.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\howtoplay.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\greenTank_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\greenTank_left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\greenTank_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\greenTank_up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\redTank_Down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\redTank_Left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\redTank_Right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\redTank_Up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fire.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\warMusic1.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
