--- a/TankTrouble/TankTrouble.csproj
+++ b/TankTrouble/TankTrouble.csproj
@@ -153,6 +153,12 @@
   <ItemGroup>
     <None Include="Resources\welcome1.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fire.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Explosion.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
