--- a/TankTrouble/TankTrouble.csproj
+++ b/TankTrouble/TankTrouble.csproj
@@ -159,6 +159,9 @@
   <ItemGroup>
     <None Include="Resources\Explosion.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\warMusic2.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
