one more bug - can't fix

--- a/TankTrouble/TankTrouble.csproj
+++ b/TankTrouble/TankTrouble.csproj
@@ -163,7 +163,7 @@
     <None Include="Resources\warMusic2.wav" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\brick.png" />
+    <None Include="Resources\brick1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
