--- a/TankTrouble/TankTrouble.csproj
+++ b/TankTrouble/TankTrouble.csproj
@@ -91,37 +91,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="greenTank_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="greenTank_left.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="greenTank_right.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="greenTank_up.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\kaboom.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\kaboom1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\grass.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\30164-1-1358619554.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\welcome1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\30164-1-13586195541.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\mauler_top.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\greenTank_down.png" />
@@ -164,6 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\brick1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\89F_ground-bottomjpg.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
